fix issue in homepage on mobile

--- a/src/views/Home/Home.css
+++ b/src/views/Home/Home.css
@@ -402,8 +402,8 @@
 
 @media (max-width: 400px) {
   .Home-title {
-    font-size: 3rem;
-    line-height: 3.8rem;
+    font-size: 2.8rem;
+    line-height: 3.6rem;
     font-weight: bold;
     margin-bottom: 1rem;
     letter-spacing: 0;
@@ -420,8 +420,8 @@
 
 @media (max-width: 350px) {
   .Home-title {
-    font-size: 2.7rem;
-    line-height: 3.3rem;
+    font-size: 2.5rem;
+    line-height: 3rem;
     font-weight: bold;
     margin-bottom: 1rem;
     letter-spacing: 0;
